      For ZIP archives, Python >= 2.6 is required. For RAR archives,
      only extraction with libunrar/unrar.dll is supported.

    - If a library collection has sub-collections, the books from these
      sub-collections will be shown as well when the collection is opened.

    - The "Bookmarks" menu can be accessed via the normal menu bar again.
      (by Alan Horkan)

    - The "Copy" menu item will now copy the current file name to the
      clipboard, in addition to the currently opened page as bitmap.

    - The currently opened file or archive can now be deleted using
      File -> Delete, or by pressing F8.

    - Added an option to use the first page of an archive as application
      icon instead of the standard MComix icon. (inspired by Alexandr
      Domrachev)

    - Added an option to manually change the user interface language
      used by MComix. Changes to the language require an application
      restart to take effect.

    - Added the following new command line switches:
      -m                  Manga mode
      -s                  Slideshow
      -d                  Double-page mode
      -b, -w, -h          Fit best/width/height, respectively.
      (suggested by Anonymous on the Comix tracker, adapted by Alan Horkan)
      -W[all|warn|error]  Set log level (default is 'warn')

    - The following preference items have been removed: 

      "Automated crash recovery": No longer necessary.
      "Show page numbers": Enabled by default.
      "Avoid unintentional page flips": Enabled by default.
      "Stretch small images": Now in Menu->View->Stretch small images.
      "Default zoom mode": Last setting is remembered instead.

    - Updated Japanese translation. (by Keita Haga)

    - Updated French translation. (by Joseph M. Sleiman)

MComix 0.91

    - Fixed excessive memory consumption due to cached pixmaps not being
      properly evicted.

    - Fixed certain wait conditions that prevented MComix from exiting
      on Win32.
